syntax = "proto3";
package api.v1;

import "api/v1/enqueue.proto";
import "api/v1/dequeue.proto";
import "api/v1/ack.proto";
import "api/v1/queue.proto";

option go_package = "github.com/jeffrom/job-manager/pkg/api/v1";


message AckResponse {}

service ApiService {
  rpc EnqueueJobs(EnqueueRequest) returns (EnqueueResponse);
  rpc DequeueJobs(DequeueRequest) returns (DequeueResponse);
  rpc AckJobs(AckRequest) returns (AckResponse);

  rpc SaveQueue(SaveQueueParams) returns (SaveQueueResponse);
  rpc ListQueues(ListQueuesRequest) returns (ListQueuesResponse);
  rpc GetQueue(GetQueueRequest) returns (GetQueueResponse);
}
